--- a/app/src/main/res/layout/item_local_trend.xml
+++ b/app/src/main/res/layout/item_local_trend.xml
@@ -33,6 +33,7 @@
             android:id="@+id/placeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:textSize="14sp"/>
 
         <TextView
