--- a/app/src/main/res/layout/activity_services_recommend.xml
+++ b/app/src/main/res/layout/activity_services_recommend.xml
@@ -68,7 +68,9 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
+                android:visibility="gone"
                 android:layout_marginBottom="16dp">
+
                 <TextView
                     android:id="@+id/resultView"
                     android:layout_width="match_parent"
