--- a/app/src/main/res/layout/fragment_local_trends.xml
+++ b/app/src/main/res/layout/fragment_local_trends.xml
@@ -5,9 +5,17 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- SwipeRefreshLayout to wrap the RecyclerView -->
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_local_trends"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
