--- a/app/src/main/res/layout/fragment_socialmedia_trends.xml
+++ b/app/src/main/res/layout/fragment_socialmedia_trends.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <!-- ScrollView to make the content scrollable -->
     <ScrollView
         android:layout_width="match_parent"
@@ -17,7 +21,7 @@
             android:orientation="vertical">
 
             <!-- BarChart for Search Queries -->
-            <com.github.mikephil.charting.charts.BarChart
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/searchQueryChart"
                 android:layout_width="match_parent"
                 android:layout_height="250dp" /> <!-- Set height -->
@@ -30,7 +34,7 @@
                 android:text="Top 10 Search Queries" />
 
             <!-- BarChart for Product Mentions -->
-            <com.github.mikephil.charting.charts.BarChart
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/productMentionChart"
                 android:layout_width="match_parent"
                 android:layout_height="250dp" /> <!-- Set height -->
@@ -43,7 +47,7 @@
                 android:text="Top 10 Product Mentions" />
 
             <!-- BarChart for Hashtags -->
-            <com.github.mikephil.charting.charts.BarChart
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/hashtagChart"
                 android:layout_width="match_parent"
                 android:layout_height="250dp" /> <!-- Set height -->
@@ -57,4 +61,5 @@
 
         </LinearLayout>
     </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
