--- a/app/src/main/res/layout/activity_checkout_form.xml
+++ b/app/src/main/res/layout/activity_checkout_form.xml
@@ -231,15 +231,12 @@
                         android:maxLength="19"
                         android:drawableEnd="@drawable/credit_card" />
 
-                    <TextView
-                        android:id="@+id/card_type"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Card Type: "
-                        android:textSize="14sp"
-                        android:textColor="@color/black"
-                        android:paddingStart="5dp"
-                        android:layout_marginTop="5dp"/>
+                    <ImageView
+                        android:id="@+id/card_type_image"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/unknown" />  <!-- Set a default image in case of unknown card -->
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
