--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -76,66 +76,13 @@
             android:layout_height="wrap_content"
             android:hint="Message to Rider (Optional)" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Payment Details"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginTop="15dp" />
 
-        <EditText
-            android:id="@+id/card_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Name on Card" />
 
-        <EditText
-            android:id="@+id/card_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Card Number"
-            android:inputType="number"
-            android:maxLength="19"
-            android:drawableEnd="@drawable/credit_card"/>
 
-        <TextView
-            android:id="@+id/card_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Card Type: "
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:paddingStart="5dp"
-            android:layout_marginTop="5dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-
-            <EditText
-                android:id="@+id/expiry_date"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:hint="MM / YY"
-                android:inputType="number" />
-
-            <EditText
-                android:id="@+id/cvv"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:hint="CVC"
-                android:inputType="number"
-                android:drawableEnd="@drawable/lock" />
-        </LinearLayout>
 
         <Button
-            android:id="@+id/confirm_payment"
+            android:id="@+id/btn_stripe_payment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirm Payment"
