--- a/app/src/main/res/layout/activity_manage_order.xml
+++ b/app/src/main/res/layout/activity_manage_order.xml
@@ -25,14 +25,36 @@
         android:padding="16dp"
         android:background="@android:color/background_light">
 
-        <!-- Spinner for Order Status -->
-        <Spinner
-            android:id="@+id/spinner_order_status"
+
+        <LinearLayout
+            android:id="@+id/upper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/spinner_background"
-            android:padding="12dp" />
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_and_message_container">
+
+            <EditText
+                android:id="@+id/search_view"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:hint="Search products"
+                android:drawableStart="@drawable/search"
+                android:background="@drawable/search_bar_background"
+                android:padding="12dp"
+                android:textSize="14sp"/>
+
+            <ImageButton
+                android:id="@+id/imageButton_order_status"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/filter_category"
+                android:elevation="6dp"
+                android:padding="8dp"/>
+        </LinearLayout>
+
 
         <!-- RecyclerView for Orders List -->
         <androidx.recyclerview.widget.RecyclerView
