--- a/app/src/main/res/layout/item_local_shop.xml
+++ b/app/src/main/res/layout/item_local_shop.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Shop Name"
+                android:maxLines="1"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black" />
@@ -65,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="Location"
                 android:textSize="14sp"
+                android:maxLines="1"
                 android:textColor="@android:color/darker_gray" />
 
             <!-- Distance -->
